--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/webscrape.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, data has been scraped from Amazon to analyze product prices</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MariaRosi/Data-Analyst-Portfolio-Projects/blob/main/Scrape%20Amazon%20Data/Amazon%20Web%20Scrapping%20Python.ipynb" class="button">Project View</a></li>
 									</ul>
